--- a/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840.yaml
+++ b/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840.yaml
@@ -1,7 +1,7 @@
 # Copyright (c) 2022 Raytac Corporation
 # SPDX-License-Identifier: Apache-2.0
 
-identifier: raytac_mdbt50q_db_40
+identifier: raytac_mdbt50q_db_40_nrf52840
 name: Raytac MDBT50Q-DB-40
 type: mcu
 arch: arm
@@ -22,7 +22,6 @@ supported:
   - gpio
   - i2c
   - i2s
-  - ieee802154
   - pwm
   - spi
   - usb_cdc
