--- a/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840-pinctrl.dtsi
+++ b/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840-pinctrl.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 Raytac Corporation
+ * Copyright (c) 2022 Nordic Semiconductor
  * SPDX-License-Identifier: Apache-2.0
  */
 
@@ -163,23 +163,6 @@
 			psels = <NRF_PSEL(QSPI_CSN, 0, 17)>;
 			low-power-enable;
 			bias-pull-up;
-		};
-	};
-
-	spi3_default: spi3_default {
-		group1 {
-			psels = <NRF_PSEL(SPIM_SCK, 1, 15)>,
-				<NRF_PSEL(SPIM_MISO, 1, 14)>,
-				<NRF_PSEL(SPIM_MOSI, 1, 13)>;
-		};
-	};
-
-	spi3_sleep: spi3_sleep {
-		group1 {
-			psels = <NRF_PSEL(SPIM_SCK, 1, 15)>,
-				<NRF_PSEL(SPIM_MISO, 1, 14)>,
-				<NRF_PSEL(SPIM_MOSI, 1, 13)>;
-			low-power-enable;
 		};
 	};
 
