--- a/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840.yaml
+++ b/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840.yaml
@@ -1,8 +1,8 @@
-# Copyright (c) 2022 Raytac Corporation
+# Copyright (c) 2022 Nordic Semiconductor ASA
 # SPDX-License-Identifier: Apache-2.0
 
 identifier: raytac_mdbt50q_db_40_nrf52840
-name: Raytac MDBT50Q-DB-40
+name: Raytac MDBT50Q_DB_40_nRF52840
 type: mcu
 arch: arm
 ram: 256
@@ -18,6 +18,7 @@ supported:
   - gpio
   - i2c
   - i2s
+  - ieee802154
   - pwm
   - spi
   - usb_cdc
