--- a/boards/x86/qemu_x86/qemu_x86.dts
+++ b/boards/x86/qemu_x86/qemu_x86.dts
@@ -66,9 +66,12 @@
 			};
 		};
 
-		eth0: eth@1000 {
+		eth0: eth0 {
 			compatible = "intel,e1000";
-			reg = <PCIE_BDF(0, 2, 0) PCIE_ID(0x8086, 0x100e)>;
+
+			vendor-id = <0x8086>;
+			device-id = <0x100e>;
+
 			interrupts = <11 IRQ_TYPE_LOWEST_EDGE_RISING 3>;
 			interrupt-parent = <&intc>;
 
