boards: Finial test
This is the second test. I added some parameters to the ADC example and it works fine. The rgb_led example also works fine.

--- a/boards/arm/raytac_mdbt50q_db_40_nrf52840/Kconfig
+++ b/boards/arm/raytac_mdbt50q_db_40_nrf52840/Kconfig
@@ -1,4 +1,4 @@
-# nRF52840 DK NRF52840 board configuration
+# Raytac MDBT50Q-DB-40 board configuration
 
 # Copyright (c) 2016 Nordic Semiconductor ASA
 # SPDX-License-Identifier: Apache-2.0
