--- a/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840-pinctrl.dtsi
+++ b/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840-pinctrl.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 Nordic Semiconductor
+ * Copyright (c) 2022 Raytac Corporation
  * SPDX-License-Identifier: Apache-2.0
  */
 
@@ -76,14 +76,18 @@
 
 	pwm0_default: pwm0_default {
 		group1 {
-			psels = <NRF_PSEL(PWM_OUT0, 0, 13)>;
+			psels = <NRF_PSEL(PWM_OUT0, 0, 13)>,
+				<NRF_PSEL(PWM_OUT1, 0, 14)>,
+				<NRF_PSEL(PWM_OUT2, 0, 15)>;
 			nordic,invert;
 		};
 	};
 
 	pwm0_sleep: pwm0_sleep {
 		group1 {
-			psels = <NRF_PSEL(PWM_OUT0, 0, 13)>;
+			psels = <NRF_PSEL(PWM_OUT0, 0, 13)>,
+				<NRF_PSEL(PWM_OUT1, 0, 14)>,
+				<NRF_PSEL(PWM_OUT2, 0, 15)>;
 			low-power-enable;
 		};
 	};
