boards: s32z270dc2: enabling I3C
Enable I3C instances on s32z270dc2_r52 boards

Signed-off-by: Dat Nguyen Duy <dat.nguyenduy@nxp.com>

--- a/boards/arm/s32z270dc2_r52/s32z270dc2_r52.dtsi
+++ b/boards/arm/s32z270dc2_r52/s32z270dc2_r52.dtsi
@@ -52,3 +52,15 @@
 &spi9 {
 	clock-frequency = <100000000>;
 };
+
+&i3c0 {
+	clock-frequency = <133333333>;
+};
+
+&i3c1 {
+	clock-frequency = <133333333>;
+};
+
+&i3c2 {
+	clock-frequency = <133333333>;
+};
