--- a/boards/xtensa/esp32/esp32.dts
+++ b/boards/xtensa/esp32/esp32.dts
@@ -15,7 +15,16 @@
 	aliases {
 		uart-0 = &uart0;
 		i2c-0 = &i2c0;
+		sw0 = &button0;
 		watchdog0 = &wdt0;
+	};
+
+	buttons {
+		compatible = "gpio-keys";
+		button0: button_0 {
+			gpios = <&gpio0 0 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
+			label = "BOOT Button";
+		};
 	};
 
 	chosen {
