--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -69,7 +69,9 @@ jobs:
         # debug
         ls -la
         git log  --pretty=oneline | head -n 10
-        ./scripts/ci/check_compliance.py -m Devicetree -m Gitlint -m Identity -m Nits -m pylint -m checkpatch -m Kconfig -c origin/${BASE_REF}..
+        ./scripts/ci/check_compliance.py --annotate -m Devicetree -m Gitlint \
+        -m Identity -m Nits -m pylint -m checkpatch -m Kconfig \
+        -c origin/${BASE_REF}..
 
     - name: upload-results
       uses: actions/upload-artifact@v3
