--- a/samples/bluetooth/hci_rpmsg/prj.conf
+++ b/samples/bluetooth/hci_rpmsg/prj.conf
@@ -10,6 +10,7 @@ CONFIG_BT=y
 CONFIG_BT_HCI_RAW=y
 CONFIG_BT_HCI_RAW_RESERVE=1
 CONFIG_BT_MAX_CONN=16
+CONFIG_BT_EXT_ADV=y
 
 CONFIG_BT_CTLR_ASSERT_HANDLER=y
 
