--- a/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840.dts
+++ b/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840.dts
@@ -1,4 +1,6 @@
-// Copyright (c) 2022 Nordic Semiconductor ASA
+# Raytac MDBT50Q_DB_40 board configuration
+
+// Copyright (c) 2022 Raytac Corporation
 // SPDX-License-Identifier: Apache-2.0
 
 /dts-v1/;
