--- a/boards/arm/raytac_mdbt50q_db_40_nrf52840/Kconfig
+++ b/boards/arm/raytac_mdbt50q_db_40_nrf52840/Kconfig
@@ -1,6 +1,6 @@
-# Raytac MDBT50Q-DB-40 board configuration
+# Raytac MDBT50Q-DB-40-NRF52840 board configuration
 
-# Copyright (c) 2016 Nordic Semiconductor ASA
+# Copyright (c) 2022 Raytac Corporation
 # SPDX-License-Identifier: Apache-2.0
 
 if BOARD_RAYTAC_MDBT50Q_DB_40_NRF52840
