Add a Test MDBT nRF52833 board
Test

--- a/boards/arm/nrf52833dk_nrf52833_mdbt/nrf52833dk_nrf52833_mdbt.yaml
+++ b/boards/arm/nrf52833dk_nrf52833_mdbt/nrf52833dk_nrf52833_mdbt.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 identifier: nrf52833dk_nrf52833_mdbt
-name: NRF52833DK_NRF52833_MDBT
+name: nRF52833-DK-NRF52833-MDBT
 type: mcu
 arch: arm
 ram: 128
@@ -11,3 +11,15 @@ toolchain:
   - zephyr
   - gnuarmemb
   - xtools
+supported:
+  - adc
+  - arduino_gpio
+  - arduino_i2c
+  - arduino_spi
+  - usb_device
+  - ble
+  - gpio
+  - pwm
+  - watchdog
+  - counter
+  - netif:openthread
