--- a/boards/x86/qemu_x86/qemu_x86.dts
+++ b/boards/x86/qemu_x86/qemu_x86.dts
@@ -51,10 +51,11 @@
 		compatible = "intel,pcie";
 		ranges;
 
-		can0: can@1000 {
+		can0: can0 {
 			compatible = "kvaser,pcican";
 			status = "okay";
-			reg = <PCIE_BDF(0,2,0) PCIE_ID(0x10e8,0x8406)>;
+			vendor-id = <0x10e8>;
+			device-id = <0x8406>;
 			interrupts = <11 IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
 			interrupt-parent = <&intc>;
 			sjw = <1>;
