drivers: regulator: s/pmic/pca9420
The "pmic" driver was in reality a driver for NXP PCA9420 PMIC. There's
no "universal PMIC". While the driver may work for other NXP PMICs, it
is clearly not generic for other vendors PMIC.

Signed-off-by: Gerard Marull-Paretas <gerard.marull@nordicsemi.no>

--- a/boards/arm/mimxrt595_evk/mimxrt595_evk_cm33.dts
+++ b/boards/arm/mimxrt595_evk/mimxrt595_evk_cm33.dts
@@ -160,7 +160,7 @@ arduino_serial: &flexcomm12 {
 
 	pca9420: pca9420@61 {
 		reg = <0x61>;
-		compatible = "regulator-pmic";
+		compatible = "nxp,pca9420";
 		/*
 		 * This mode-reg setting will permit mode control by
 		 * pins, a feature of the PCA9240. If mode control via
