--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -43,7 +43,7 @@ jobs:
       run: |
         pip3 install setuptools
         pip3 install wheel
-        pip3 install python-magic junitparser gitlint pylint pykwalify
+        pip3 install python-magic lxml junitparser gitlint pylint pykwalify
         pip3 install west
 
     - name: west setup
