ci: twister: fix typo
Fix typo in conditional allowing upload of test results on scheduled
events.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/.github/workflows/twister.yaml
+++ b/.github/workflows/twister.yaml
@@ -288,7 +288,7 @@ jobs:
         with:
           path: artifacts
 
-      - if: github.event_name == 'push' || github.event_name == 'schdule'
+      - if: github.event_name == 'push' || github.event_name == 'schedule'
         name: Upload to opensearch
         run: |
           pip3 install opensearch-py
