samples: subsys: mgmt: mcumgr: Add Bluetooth user data size
Adds a configuration for the user data size when using the
Bluetooth overlay.

Signed-off-by: Jamie McCrae <jamie.mccrae@nordicsemi.no>

--- a/samples/subsys/mgmt/mcumgr/smp_svr/overlay-bt.conf
+++ b/samples/subsys/mgmt/mcumgr/smp_svr/overlay-bt.conf
@@ -30,3 +30,6 @@ CONFIG_MCUMGR_CMD_FS_MGMT=y
 # Enable the storage erase command.
 CONFIG_MCUMGR_GRP_ZEPHYR_BASIC=y
 CONFIG_MCUMGR_GRP_BASIC_CMD_STORAGE_ERASE=y
+
+# Network settings
+CONFIG_NET_BUF_USER_DATA_SIZE=8
