--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1930,6 +1930,7 @@ STM32 Platforms:
   collaborators:
     - ABOSTM
     - FRASTM
+    - gautierg-st
     - GeorgeCGV
   files:
     - boards/arm/nucleo_*/
