MAINTAINERS.yaml: Add Guillaume Gautier as STM32 collaborator
Add gautierg-st as STM32 collaborator.


Signed-off-by: Erwan Gouriou <erwan.gouriou@linaro.org>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1946,6 +1946,7 @@ STM32 Platforms:
   collaborators:
     - ABOSTM
     - FRASTM
+    - gautierg-st
     - GeorgeCGV
   files:
     - boards/arm/nucleo_*/
