MAINTAINERS: additional collaborators for FPGA drivers
Adding Tomasz, Filip, and Mateusz as collaborators.

Signed-off-by: Chris Friedt <cfriedt@meta.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -752,6 +752,10 @@ Release Notes:
   status: maintained
   maintainers:
     - cfriedt
+  collaborators:
+    - tgorochowik
+    - fkokosinski
+    - msierszulski
   files:
     - drivers/fpga/
     - dts/bindings/fpga/
