kernel/zync: Augment k_zync() timeout loop to be optionally stricter
There is concern about the early-return semantics of k_zync, where a
thread that passed a non-FOREVER/non-NO_WAIT timeout might return
before the expiration of the time if the thread gets awoken for
spurious reasons (e.g. if it was unpended to service a zync atom
count, but a higher priority thread got there first).

Add a computed retry loop to make sure the thread stays pending for at
least as long as requested.  This is an optional feature based on
kconfig.  In practice, it's preferable to handle conditions like this
in applicatio code, which can make better decisions about what to
optimize.

Signed-off-by: Andy Ross <andyross@google.com>

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -403,6 +403,19 @@ config ZYNC_LEGACY
 	  Very few applications depend on this older behavior and most
 	  should select the various features individually.
 
+config ZYNC_STRICT_TIMEOUTS
+	bool "Add retries to k_zync-based timeouts"
+	help
+	  When set, zync-wrapped IPC primitives like k_sem and k_mutex
+	  will have a timeout-sensitive retry loop placed around their
+	  k_zync() invocation.  This will force them to wait for the
+	  specified time even in circumstances (like being
+	  suspended/restarted, or having their intended atom count
+	  "stolen" by a higher priority thread) where k_zync would
+	  naturally return early with -EAGAIN.  Optional; most code
+	  should be prepared to handle -EAGAIN on its own, where the
+	  app can make a better choice as to what to do.
+
 menu "Kernel Debugging and Metrics"
 
 config INIT_STACKS
