--- a/boards/arm/mps3_an547/mps3_an547.dts
+++ b/boards/arm/mps3_an547/mps3_an547.dts
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2018-2021 Linaro Limited
+ * Copyright 2022 Arm Limited and/or its affiliates <open-source-office@arm.com>
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -82,6 +83,21 @@
 		user_button_1: button_1 {
 			label = "USERPB1";
 			gpios = <&gpio_button 1>;
+		};
+	};
+
+	ethosu {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		interrupt-parent = <&nvic>;
+
+		ethosu0: ethosu@48102000 {
+			compatible = "arm,ethos-u";
+			reg = <0x48102000>;
+			interrupts = <56 3>;
+			secure-enable;
+			privilege-enable;
+			status = "okay";
 		};
 	};
 
