tests/kernel/zync: Add a case to exercise strict timeouts
Test CONFIG_ZYNC_STRICT_TIMEOUTS, both with and without absolute
timeouts.

Signed-off-by: Andy Ross <andyross@google.com>

--- a/tests/kernel/zync/testcase.yaml
+++ b/tests/kernel/zync/testcase.yaml
@@ -12,6 +12,14 @@ tests:
   kernel.zync.prio_boost:
     extra_configs:
       - CONFIG_ZYNC_PRIO_BOOST=y
+  kernel.zync.strict_timeouts:
+    extra_configs:
+      - CONFIG_ZYNC_STRICT_TIMEOUTS=y
+      - CONFIG_TIMEOUT_64BIT=y
+  kernel.zync.strict_timeouts32:
+    extra_configs:
+      - CONFIG_ZYNC_STRICT_TIMEOUTS=y
+      - CONFIG_TIMEOUT_64BIT=n
   kernel.zync.nouser:
     extra_configs:
       - CONFIG_TEST_USERSPACE=n
