dts: bindings: regulator: regulator-name is common
Following Linux regulator.yaml, regulator-name is a common property for
all regulators.

Signed-off-by: Gerard Marull-Paretas <gerard.marull@nordicsemi.no>

--- a/dts/bindings/regulator/regulator.yaml
+++ b/dts/bindings/regulator/regulator.yaml
@@ -15,3 +15,7 @@ properties:
   regulator-boot-on:
     type: boolean
     description: regulator should be turned on at startup
+
+  regulator-name:
+    type: string
+    description: Descriptive name for regulator outputs.
