--- a/dts/bindings/regulator/regulator-fixed.yaml
+++ b/dts/bindings/regulator/regulator-fixed.yaml
@@ -3,7 +3,13 @@
 
 description: GPIO-controlled regulators
 
-include: regulator.yaml
+include:
+  - name: base.yaml
+  - name: regulator.yaml
+    property-allowlist:
+      - regulator-name
+      - regulator-boot-on
+      - regulator-always-on
 
 # NOTE: The driver supports "regulator-fixed-sync" as a specializing
 # variant when it's known that the GPIO state change operations are
