drivers: regulator: pca9420: use standard regulator-min|max-microvolt
regulator.yaml provides now standard properties for minimum/maximum
voltage.

Signed-off-by: Gerard Marull-Paretas <gerard.marull@nordicsemi.no>

--- a/boards/arm/mimxrt595_evk/mimxrt595_evk_cm33.dts
+++ b/boards/arm/mimxrt595_evk/mimxrt595_evk_cm33.dts
@@ -193,8 +193,8 @@ arduino_serial: &flexcomm12 {
 			enable-reg = <PCA9420_MODECFG_0_2>;
 			enable-mask = <PCA9420_MODECFG_2_SW1_EN_MASK>;
 			enable-val = <PCA9420_MODECFG_2_SW1_EN_VAL>;
-			min-uV = <500000>;
-			max-uV = <1800000>;
+			regulator-min-microvolt = <500000>;
+			regulator-max-microvolt = <1800000>;
 			regulator-boot-on;
 		};
 
@@ -210,8 +210,8 @@ arduino_serial: &flexcomm12 {
 			enable-reg = <PCA9420_MODECFG_0_2>;
 			enable-mask = <PCA9420_MODECFG_2_SW2_EN_MASK>;
 			enable-val = <PCA9420_MODECFG_2_SW2_EN_VAL>;
-			min-uV = <1500000>;
-			max-uV = <3300000>;
+			regulator-min-microvolt = <1500000>;
+			regulator-max-microvolt = <3300000>;
 			regulator-boot-on;
 		};
 
@@ -227,8 +227,8 @@ arduino_serial: &flexcomm12 {
 			enable-reg = <PCA9420_MODECFG_0_2>;
 			enable-mask = <PCA9420_MODECFG_2_LDO1_EN_MASK>;
 			enable-val = <PCA9420_MODECFG_2_LDO1_EN_VAL>;
-			min-uV = <1700000>;
-			max-uV = <1900000>;
+			regulator-min-microvolt = <1700000>;
+			regulator-max-microvolt = <1900000>;
 			regulator-boot-on;
 		};
 
@@ -244,8 +244,8 @@ arduino_serial: &flexcomm12 {
 			enable-reg = <PCA9420_MODECFG_0_2>;
 			enable-mask = <PCA9420_MODECFG_2_LDO2_EN_MASK>;
 			enable-val = <PCA9420_MODECFG_2_LDO2_EN_VAL>;
-			min-uV = <1500000>;
-			max-uV = <3300000>;
+			regulator-min-microvolt = <1500000>;
+			regulator-max-microvolt = <3300000>;
 			regulator-boot-on;
 		};
 
