--- a/dts/bindings/regulator/nxp,pca9420.yaml
+++ b/dts/bindings/regulator/nxp,pca9420.yaml
@@ -6,22 +6,14 @@ description: NXP PCA9420 PMIC
 
 compatible: "nxp,pca9420"
 
-include: base.yaml
+include:
+  - name: base.yaml
+  - name: regulator.yaml
+    property-allowlist:
+      - regulator-allowed-modes
+      - regulator-initial-mode
 
 properties:
-  regulator-initial-mode:
-      type: int
-      description: |
-        Initial operating mode of the regulator. Regulators modes can be
-        used for better power saving, or different voltage configurations,
-        and are hardware specific.
-  regulator-allowed-modes:
-      type: array
-      description: |
-        Array of operating modes that software may configure for the
-        regulator at runtime. The set of possible operating modes depends on
-        what the hardware supports.
-
   modesel-reg:
     type: int
     description: |
