--- a/dts/bindings/regulator/nxp,pca9420.yaml
+++ b/dts/bindings/regulator/nxp,pca9420.yaml
@@ -1,7 +1,29 @@
 # Copyright (c), 2021 NXP
 # SPDX -License-Identifier: Apache-2.0
 
-description: NXP PCA9420 PMIC
+description: |
+  NXP PCA9420 PMIC
+
+  The PMIC has two buck converters and two LDOs. All need to be defined as
+  children nodes, strictly following the BUCK1, BUCK2, LDO1 and LDO2 node names.
+  For example:
+
+  pmic@61 {
+    reg = <0x61>;
+    ...
+    BUCK1 {
+      /* all properties for BUCK1 */
+    };
+    BUCK2 {
+      /* all properties for BUCK2 */
+    };
+    LDO1 {
+      /* all properties for LDO1 */
+    };
+    LDO2 {
+      /* all properties for LDO2 */
+    };
+  };
 
 
 compatible: "nxp,pca9420"
