dts: bindings: regulator: nxp,pca9420: add maximum current
Maximum current was not specified. Even though not used, yet, it is a
valuable information. Values taken from PCA9420 datasheet, Figure 1
"Simplified block diagram".

Signed-off-by: Gerard Marull-Paretas <gerard.marull@nordicsemi.no>

--- a/dts/bindings/regulator/nxp,pca9420.yaml
+++ b/dts/bindings/regulator/nxp,pca9420.yaml
@@ -55,6 +55,7 @@ child-binding:
         - regulator-boot-on
         - regulator-min-microvolt
         - regulator-max-microvolt
+        - regulator-max-microamp
 
   description: Voltage output of PMIC controller regulator
   properties:
@@ -62,6 +63,9 @@ child-binding:
         required: true
 
       regulator-max-microvolt:
+          required: true
+
+      regulator-max-microamp:
           required: true
 
       voltage-range:
