--- a/boards/arm/mimxrt595_evk/mimxrt595_evk_cm33.dts
+++ b/boards/arm/mimxrt595_evk/mimxrt595_evk_cm33.dts
@@ -188,6 +188,7 @@ arduino_serial: &flexcomm12 {
 			num-current-levels = <7>;
 			regulator-min-microvolt = <500000>;
 			regulator-max-microvolt = <1800000>;
+			regulator-max-microamp = <250000>;
 			regulator-boot-on;
 		};
 
@@ -198,6 +199,7 @@ arduino_serial: &flexcomm12 {
 			num-current-levels = <7>;
 			regulator-min-microvolt = <1500000>;
 			regulator-max-microvolt = <3300000>;
+			regulator-max-microamp = <500000>;
 			regulator-boot-on;
 		};
 
@@ -208,6 +210,7 @@ arduino_serial: &flexcomm12 {
 			num-current-levels = <7>;
 			regulator-min-microvolt = <1700000>;
 			regulator-max-microvolt = <1900000>;
+			regulator-max-microamp = <1000>;
 			regulator-boot-on;
 		};
 
@@ -218,6 +221,7 @@ arduino_serial: &flexcomm12 {
 			num-current-levels = <7>;
 			regulator-min-microvolt = <1500000>;
 			regulator-max-microvolt = <3300000>;
+			regulator-max-microamp = <250000>;
 			regulator-boot-on;
 		};
 
