--- a/boards/arm/mimxrt685_evk/mimxrt685_evk_cm33.dts
+++ b/boards/arm/mimxrt685_evk/mimxrt685_evk_cm33.dts
@@ -258,6 +258,7 @@ i2s1: &flexcomm3 {
 			num-current-levels = <7>;
 			regulator-min-microvolt = <500000>;
 			regulator-max-microvolt = <1800000>;
+			regulator-max-microamp = <250000>;
 			regulator-boot-on;
 		};
 
@@ -268,6 +269,7 @@ i2s1: &flexcomm3 {
 			num-current-levels = <7>;
 			regulator-min-microvolt = <1500000>;
 			regulator-max-microvolt = <3300000>;
+			regulator-max-microamp = <500000>;
 			regulator-boot-on;
 		};
 
@@ -278,6 +280,7 @@ i2s1: &flexcomm3 {
 			num-current-levels = <7>;
 			regulator-min-microvolt = <1700000>;
 			regulator-max-microvolt = <1900000>;
+			regulator-max-microamp = <1000>;
 			regulator-boot-on;
 		};
 
@@ -288,6 +291,7 @@ i2s1: &flexcomm3 {
 			num-current-levels = <7>;
 			regulator-min-microvolt = <1500000>;
 			regulator-max-microvolt = <3300000>;
+			regulator-max-microamp = <250000>;
 			regulator-boot-on;
 		};
 
