--- a/dts/bindings/regulator/nxp,pca9420.yaml
+++ b/dts/bindings/regulator/nxp,pca9420.yaml
@@ -36,6 +36,32 @@ include:
       - regulator-initial-mode
 
 properties:
+  nxp,vin-ilim-microamp:
+    type: int
+    default: 425000
+    enum:
+      - 85000
+      - 255000
+      - 425000
+      - 595000
+      - 765000
+      - 935000
+      - 1105000
+    description: |
+      VIN input current limit, in microamperes. Value reflects typical value,
+      below you can find min/typical/max values:
+
+      - 74 mA/85 mA/98 mA
+      - 222 mA/255 mA/293 mA
+      - 370 mA/425 mA/489 mA
+      - 517 mA/595 mA/684 mA
+      - 665 mA/765 mA/880 mA
+      - 813 mA/935 mA/1075 mA
+      - 961 mA/1105 mA/1271 mA
+
+      To disable current limit, set property to zero. Defaults to 425mA, the IC
+      default value.
+
   modesel-reg:
     type: int
     description: |
@@ -73,16 +99,3 @@ child-binding:
           description: |
             If the enable bit should be zero to turn the regulator on, add this
             property.
-      current-levels:
-          type: array
-          description: |
-            Array of current limit values in uA, followed by the register value
-            that must be written to enable the current limit. For example,
-            [800000, 0x3] denotes a value of 0x3 must be written to the register
-            to set a current limit of 800mA
-      num-current-levels:
-          type: int
-          default: 0
-          description: |
-            Number of current limit levels this regulator supports. If left as
-            default, regulator current support will be disabled.
