samples: subsys: mgmt: mcumgr: Update sample to use boot-up Kconfig
This replaces the start up code that registers the command handlers
and transports with the new Kconfig that does this automatically at
boot-up.

Signed-off-by: Jamie McCrae <jamie.mccrae@nordicsemi.no>

--- a/samples/subsys/mgmt/mcumgr/smp_svr/overlay-bt.conf
+++ b/samples/subsys/mgmt/mcumgr/smp_svr/overlay-bt.conf
@@ -39,3 +39,6 @@ CONFIG_CLOCK_CONTROL_NRF_SHELL=n
 CONFIG_DEVICE_SHELL=n
 CONFIG_DEVMEM_SHELL=n
 CONFIG_FLASH_SHELL=n
+
+# Wait for Bluetooth to initialise at boot-up
+CONFIG_MCUMGR_SMP_BOOT_SETUP_BT_WAIT=y
