--- a/samples/subsys/mgmt/mcumgr/smp_svr/prj.conf
+++ b/samples/subsys/mgmt/mcumgr/smp_svr/prj.conf
@@ -32,3 +32,7 @@ CONFIG_MCUBOOT_UTIL_LOG_LEVEL_WRN=y
 
 # Disable debug logging
 CONFIG_LOG_MAX_LEVEL=3
+
+# Setup MCUmgr and SMP transports at boot-up
+CONFIG_MCUMGR_SMP_BOOT_SETUP=y
+CONFIG_MCUMGR_SMP_BOOT_SETUP_TRANSPORT=y
