dma: dts: Rename of the dma_buf_alignment to dma-buf-addr-alignment
Renamed the dma-buf-alignment field to a more explicit
and descriptive name dma-buf-addr-alignment.

Signed-off-by: Adrian Warecki <adrian.warecki@intel.com>

--- a/dts/bindings/dma/dma-controller.yaml
+++ b/dts/bindings/dma/dma-controller.yaml
@@ -28,6 +28,6 @@ properties:
       type: int
       description: Number of DMA request signals supported by the controller.
 
-    dma-buf-alignment:
+    dma-buf-addr-alignment:
       type: int
-      description: Memory alignment requirement for DMA buffers used by the controller.
+      description: Memory address alignment requirement for DMA buffers used by the controller.
