--- a/dts/xtensa/intel/intel_adsp_cavs15.dtsi
+++ b/dts/xtensa/intel/intel_adsp_cavs15.dtsi
@@ -190,7 +190,7 @@
 			#dma-cells = <1>;
 			reg = <0x00002400 0x20>;
 			dma-channels = <2>;
-			dma-buf-alignment = <128>;
+			dma-buf-addr-alignment = <128>;
 
 			status = "okay";
 		};
@@ -200,7 +200,7 @@
 			#dma-cells = <1>;
 			reg = <0x00002600 0x20>;
 			dma-channels = <2>;
-			dma-buf-alignment = <128>;
+			dma-buf-addr-alignment = <128>;
 
 			status = "okay";
 		};
@@ -210,7 +210,7 @@
 			#dma-cells = <1>;
 			reg = <0x00002800 0x40>;
 			dma-channels = <6>;
-			dma-buf-alignment = <128>;
+			dma-buf-addr-alignment = <128>;
 
 			status = "okay";
 		};
@@ -220,7 +220,7 @@
 			#dma-cells = <1>;
 			reg = <0x00002c00 0x40>;
 			dma-channels = <7>;
-			dma-buf-alignment = <128>;
+			dma-buf-addr-alignment = <128>;
 
 			status = "okay";
 		};
