--- a/dts/xtensa/intel/intel_adsp_ace15_mtpm.dtsi
+++ b/dts/xtensa/intel/intel_adsp_ace15_mtpm.dtsi
@@ -346,7 +346,7 @@
 			#dma-cells = <1>;
 			reg = <0x00072400 0x20>;
 			dma-channels = <9>;
-			dma-buf-alignment = <128>;
+			dma-buf-addr-alignment = <128>;
 			status = "okay";
 		};
 
@@ -355,7 +355,7 @@
 			#dma-cells = <1>;
 			reg = <0x00072600 0x20>;
 			dma-channels = <10>;
-			dma-buf-alignment = <128>;
+			dma-buf-addr-alignment = <128>;
 			status = "okay";
 		};
 
@@ -364,7 +364,7 @@
 			#dma-cells = <1>;
 			reg = <0x00072800 0x40>;
 			dma-channels = <9>;
-			dma-buf-alignment = <128>;
+			dma-buf-addr-alignment = <128>;
 			status = "okay";
 		};
 
@@ -373,7 +373,7 @@
 			#dma-cells = <1>;
 			reg = <0x00072c00 0x40>;
 			dma-channels = <10>;
-			dma-buf-alignment = <128>;
+			dma-buf-addr-alignment = <128>;
 			status = "okay";
 		};
 
