dma: dts: Add support for dma-copy-alignment and dma-buf-size-alignment
dma-buf-size-alignment: Buffer size alignment required by the DMA
controller.

dma-copy-alignment: Minimal chunk of data possible to be copied
by the controller.

Signed-off-by: Adrian Warecki <adrian.warecki@intel.com>

--- a/dts/bindings/dma/intel,adsp-hda.yaml
+++ b/dts/bindings/dma/intel,adsp-hda.yaml
@@ -17,3 +17,9 @@ properties:
 
     "dma-buf-addr-alignment":
       required: true
+
+    "dma-buf-size-alignment":
+      required: true
+
+    "dma-copy-alignment":
+      required: true
