--- a/dts/bindings/dma/dma-controller.yaml
+++ b/dts/bindings/dma/dma-controller.yaml
@@ -31,3 +31,13 @@ properties:
     dma-buf-addr-alignment:
       type: int
       description: Memory address alignment requirement for DMA buffers used by the controller.
+
+    dma-buf-size-alignment:
+      type: int
+      required: false
+      description: Memory size alignment requirement for DMA buffers used by the controller.
+
+    dma-copy-alignment:
+      type: int
+      required: false
+      description: Minimal chunk of data possible to be copied by the controller.
