dma: dts: hda: Add controller attributes to DT
Added to the device tree values of the dma-copy-alignment
and dma-buf-size-alignment attributes.

Signed-off-by: Adrian Warecki <adrian.warecki@intel.com>

--- a/dts/xtensa/intel/intel_adsp_ace15_mtpm.dtsi
+++ b/dts/xtensa/intel/intel_adsp_ace15_mtpm.dtsi
@@ -343,6 +343,8 @@
 			reg = <0x00072400 0x20>;
 			dma-channels = <9>;
 			dma-buf-addr-alignment = <128>;
+			dma-buf-size-alignment = <32>;
+			dma-copy-alignment = <32>;
 			status = "okay";
 		};
 
@@ -352,6 +354,8 @@
 			reg = <0x00072600 0x20>;
 			dma-channels = <10>;
 			dma-buf-addr-alignment = <128>;
+			dma-buf-size-alignment = <32>;
+			dma-copy-alignment = <32>;
 			status = "okay";
 		};
 
@@ -361,6 +365,8 @@
 			reg = <0x00072800 0x40>;
 			dma-channels = <9>;
 			dma-buf-addr-alignment = <128>;
+			dma-buf-size-alignment = <32>;
+			dma-copy-alignment = <32>;
 			status = "okay";
 		};
 
@@ -370,6 +376,8 @@
 			reg = <0x00072c00 0x40>;
 			dma-channels = <10>;
 			dma-buf-addr-alignment = <128>;
+			dma-buf-size-alignment = <32>;
+			dma-copy-alignment = <32>;
 			status = "okay";
 		};
 
