--- a/dts/xtensa/intel/intel_adsp_cavs.dtsi
+++ b/dts/xtensa/intel/intel_adsp_cavs.dtsi
@@ -36,6 +36,8 @@
 			reg = <0x00072400 0x20>;
 			dma-channels = <4>;
 			dma-buf-addr-alignment = <128>;
+			dma-buf-size-alignment = <32>;
+			dma-copy-alignment = <32>;
 
 			status = "okay";
 		};
@@ -46,6 +48,8 @@
 			reg = <0x00072600 0x20>;
 			dma-channels = <4>;
 			dma-buf-addr-alignment = <128>;
+			dma-buf-size-alignment = <32>;
+			dma-copy-alignment = <32>;
 
 			status = "okay";
 		};
@@ -56,6 +60,8 @@
 			reg = <0x00072800 0x40>;
 			dma-channels = <9>;
 			dma-buf-addr-alignment = <128>;
+			dma-buf-size-alignment = <32>;
+			dma-copy-alignment = <32>;
 
 			status = "okay";
 		};
@@ -66,6 +72,8 @@
 			reg = <0x00072c00 0x40>;
 			dma-channels = <7>;
 			dma-buf-addr-alignment = <128>;
+			dma-buf-size-alignment = <32>;
+			dma-copy-alignment = <32>;
 
 			status = "okay";
 		};
