--- a/dts/xtensa/intel/intel_adsp_cavs15.dtsi
+++ b/dts/xtensa/intel/intel_adsp_cavs15.dtsi
@@ -170,6 +170,8 @@
 			shim = <0x00000c00 0x080>;
 			interrupts = <0x10 0 0>;
 			interrupt-parent = <&cavs_intc3>;
+			dma-buf-size-alignment = <4>;
+			dma-copy-alignment = <4>;
 
 			status = "okay";
 		};
@@ -181,6 +183,8 @@
 			shim = <0x00000c80 0x080>;
 			interrupts = <0x0F 0 0>;
 			interrupt-parent = <&cavs_intc3>;
+			dma-buf-size-alignment = <4>;
+			dma-copy-alignment = <4>;
 
 			status = "okay";
 		};
