--- a/dts/xtensa/intel/intel_adsp_ace15_mtpm.dtsi
+++ b/dts/xtensa/intel/intel_adsp_ace15_mtpm.dtsi
@@ -411,6 +411,8 @@
 			shim = <0x0007c800 0x1000>;
 			interrupts = <0x10 0 0>;
 			interrupt-parent = <&core_intc>;
+			dma-buf-size-alignment = <4>;
+			dma-copy-alignment = <4>;
 			status = "okay";
 		};
 
@@ -421,6 +423,8 @@
 			shim = <0x0007d800 0x1000>;
 			interrupts = <0x20 0 0>;
 			interrupt-parent = <&core_intc>;
+			dma-buf-size-alignment = <4>;
+			dma-copy-alignment = <4>;
 			status = "okay";
 		};
 
