mgmt: mcumgr: Add nvs_mgmt
Adds a non-volatile management group for MCUmgr that allows for
NVS manipulation by a remote device.

Signed-off-by: Jamie McCrae <jamie.mccrae@nordicsemi.no>

--- a/subsys/mgmt/mcumgr/grp/CMakeLists.txt
+++ b/subsys/mgmt/mcumgr/grp/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory_ifdef(CONFIG_MCUMGR_CMD_OS_MGMT        os_mgmt)
 add_subdirectory_ifdef(CONFIG_MCUMGR_CMD_STAT_MGMT      stat_mgmt)
 add_subdirectory_ifdef(CONFIG_MCUMGR_CMD_SHELL_MGMT     shell_mgmt)
 add_subdirectory_ifdef(CONFIG_MCUMGR_GRP_ZEPHYR_BASIC   zephyr_basic)
+add_subdirectory_ifdef(CONFIG_MCUMGR_CMD_NVS_MGMT       nvs_mgmt)
