dts: bindings: rename disk-sector-size
To avoid any confusion with other flash devices sector-size
the property of the flash-disk is renamed to disk-sector-size
in the dts/bindings/misc/zephyr/flash-disk.yaml

Signed-off-by: Francois Ramu <francois.ramu@st.com>

--- a/dts/bindings/misc/zephyr,flash-disk.yaml
+++ b/dts/bindings/misc/zephyr,flash-disk.yaml
@@ -20,7 +20,7 @@ properties:
       description: |
         Disk name.
 
-    sector-size:
+    disk-sector-size:
       type: int
       required: false
       default: 512
