--- a/.github/workflows/twister.yaml
+++ b/.github/workflows/twister.yaml
@@ -276,7 +276,7 @@ jobs:
 
     steps:
       # Needed for opensearch and upload script
-      - if: github.event_name == 'push'
+      - if: github.event_name == 'push' || github.event_name == 'schedule'
         name: Checkout
         uses: actions/checkout@v3
         with:
