--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -69,8 +69,8 @@ jobs:
         # debug
         ls -la
         git log  --pretty=oneline | head -n 10
-        ./scripts/ci/check_compliance.py --annotate -m Devicetree -m Gitlint \
-        -m Identity -m Nits -m pylint -m checkpatch -m Kconfig \
+        ./scripts/ci/check_compliance.py --annotate -m DevicetreeBindings
+        -m Gitlint -m Identity -m Nits -m pylint -m checkpatch -m Kconfig \
         -c origin/${BASE_REF}..
 
     - name: upload-results
@@ -86,7 +86,7 @@ jobs:
           exit 1;
         fi
 
-        for file in Nits.txt checkpatch.txt Identity.txt Gitlint.txt pylint.txt Devicetree.txt Kconfig.txt; do
+        for file in Nits.txt checkpatch.txt Identity.txt Gitlint.txt pylint.txt Devicetree.txt Kconfig.txt DevicetreeBindings.txt; do
           if [[ -s $file ]]; then
             errors=$(cat $file)
             errors="${errors//'%'/'%25'}"
