codeowners: Add myself to check_compliance.py
I've been doing quite a bit of work on it and plan to do quite a bit
more.

Signed-off-by: Carles Cufi <carles.cufi@nordicsemi.no>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -712,6 +712,7 @@ scripts/build/gen_image_info.py           @tejlmand
 /scripts/dts/                             @mbolivar-nordic @galak
 /scripts/release/                         @nashif
 /scripts/ci/                              @nashif
+/scripts/ci/check_compliance.py           @nashif @carlescufi
 /arch/x86/gen_gdt.py                      @dcpleung @nashif
 /arch/x86/gen_idt.py                      @dcpleung @nashif
 /scripts/build/gen_kobject_list.py        @dcpleung @nashif
