--- a/tests/subsys/settings/file_littlefs/src/CMakeLists.txt
+++ b/tests/subsys/settings/file_littlefs/src/CMakeLists.txt
@@ -2,13 +2,13 @@
 # Copyright (c) 2019 Nordic Semiconductor ASA
 
 add_subdirectory(../../src settings_test_bindir)
-add_subdirectory(../../fs/src settings_test_fs_bindir)
+add_subdirectory(../../file/src settings_test_file_bindir)
 
 zephyr_include_directories(
 	${ZEPHYR_BASE}/subsys/settings/include
 	${ZEPHYR_BASE}/subsys/settings/src
-	${ZEPHYR_BASE}/tests/subsys/settings/fs/include
-	${ZEPHYR_BASE}/tests/subsys/settings/littlefs/src
+	${ZEPHYR_BASE}/tests/subsys/settings/file/include
+	${ZEPHYR_BASE}/tests/subsys/settings/file_littlefs/src
 	)
 
 
