MAINTAINERS: Add fredrikdanebjer to Bluetooth Audio
Add fredrikdanebjer as a collaborator for Bluetooth Audio.

Signed-off-by: Emil Gydesen <emil.gydesen@nordicsemi.no>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -251,6 +251,7 @@ Bluetooth Audio:
     - sjanc
     - szymon-czapracki
     - asbjornsabo
+    - fredrikdanebjer
   files:
     - subsys/bluetooth/audio/
     - include/zephyr/bluetooth/audio/
