--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -250,6 +250,7 @@ Bluetooth Audio:
     - rymanluk
     - sjanc
     - asbjornsabo
+    - fredrikdanebjer
   files:
     - subsys/bluetooth/audio/
     - include/zephyr/bluetooth/audio/
