MAINTAINERS: Add szymon-czapracki to Bluetooth Audio
Add szymon-czapracki as a collaborator for Bluetooth Audio.

Signed-off-by: Emil Gydesen <emil.gydesen@nordicsemi.no>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -249,6 +249,7 @@ Bluetooth Audio:
     - MariuszSkamra
     - rymanluk
     - sjanc
+    - szymon-czapracki
     - asbjornsabo
   files:
     - subsys/bluetooth/audio/
