dts: arm: stm32: add PLL2 to stm32h7
Adds disabled PLL2 clock..

Signed-off-by: Georgij Cernysiov <geo.cgv@gmail.com>

--- a/dts/arm/st/h7/stm32h7.dtsi
+++ b/dts/arm/st/h7/stm32h7.dtsi
@@ -87,6 +87,13 @@
 			status = "disabled";
 		};
 
+		pll2: pll@1 {
+			#clock-cells = <0>;
+			compatible = "st,stm32h7-pll-clock";
+			reg = <1>;
+			status = "disabled";
+		};
+
 		pll3: pll@2 {
 			#clock-cells = <0>;
 			compatible = "st,stm32h7-pll-clock";
