samples: chre: exclude qemu_leon3
This test used to only run on native_posix due to the test filter until
e478a4e850 was merged. Now it's running on all platforms but it's failing
on qemu_leon3 for some address alignment issue.

Signed-off-by: Fabio Baltieri <fabiobaltieri@google.com>

--- a/samples/modules/chre/sample.yaml
+++ b/samples/modules/chre/sample.yaml
@@ -5,6 +5,7 @@ sample:
 tests:
   sample.modules.chre:
     tags: introduction
+    platform_exclude: qemu_leon3
     modules:
       - chre
     harness: console
