--- a/samples/net/sockets/echo_server/sample.yaml
+++ b/samples/net/sockets/echo_server/sample.yaml
@@ -9,7 +9,7 @@ sample:
   name: Socket Echo Server
 tests:
   sample.net.sockets.echo_server:
-    platform_allow: qemu_x86 sam_e70_xplained frdm_k64f
+    platform_allow: qemu_x86 qemu_x86_64 sam_e70_xplained frdm_k64f
       qemu_cortex_m3 frdm_kw41z
   sample.net.sockets.echo_server.802154:
     extra_args: OVERLAY_CONFIG="overlay-qemu_802154.conf"
@@ -78,7 +78,7 @@ tests:
   sample.net.sockets.echo_server.e1000:
     extra_args: OVERLAY_CONFIG="overlay-e1000.conf"
     tags: net
-    platform_allow: qemu_x86
+    platform_allow: qemu_x86 qemu_x86_64
   sample.net.sockets.echo_server.stellaris:
     extra_args: OVERLAY_CONFIG="overlay-qemu_cortex_m3_eth.conf"
     tags: net
@@ -89,4 +89,4 @@ tests:
     platform_allow: mps2_an385
   sample.net.sockets.echo_server.userspace:
     extra_args: CONFIG_USERSPACE=y OVERLAY_CONFIG="overlay-e1000.conf"
-    platform_allow: qemu_x86
+    platform_allow: qemu_x86 qemu_x86_64
