--- a/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840.yaml
+++ b/boards/arm/raytac_mdbt50q_db_40_nrf52840/raytac_mdbt50q_db_40_nrf52840.yaml
@@ -1,10 +1,10 @@
-# Raytac MDBT50Q_DB_40 board configuration
+# Raytac MDBT50Q_DB_40_NRF52840 board configuration
 
 # Copyright (c) 2022 Raytac Corporation
 # SPDX-License-Identifier: Apache-2.0
 
 identifier: raytac_mdbt50q_db_40_nrf52840
-name: Raytac MDBT50Q_DB_40_nRF52840
+name: Raytac MDBT50Q_DB_40_NRF52840
 type: mcu
 arch: arm
 ram: 256
