build: Add CONGIG_BUILD_OUTPUT_BIN to board configs
Since CONGIG_BUILD_OUTPUT_BIN is not default option select it only
when needed.

Signed-off-by: Andrei Emeltchenko <andrei.emeltchenko@intel.com>

--- a/boards/arm/npcx7m6fb_evb/npcx7m6fb_evb_defconfig
+++ b/boards/arm/npcx7m6fb_evb/npcx7m6fb_evb_defconfig
@@ -8,6 +8,8 @@ CONFIG_SOC_NPCX7M6FB=y
 CONFIG_SOC_SERIES_NPCX7=y
 CONFIG_BOARD_NPCX7M6FB_EVB=y
 
+CONFIG_BUILD_OUTPUT_BIN=y
+
 # Enable NPCX firmware header
 CONFIG_NPCX_HEADER=y
 CONFIG_NPCX_IMAGE_OUTPUT_HEX=y
