--- a/tests/boot/test_mcuboot/prj.conf
+++ b/tests/boot/test_mcuboot/prj.conf
@@ -4,3 +4,4 @@ CONFIG_IMG_MANAGER=y
 CONFIG_FLASH=y
 # Enable reboot API to reset board after selecting new image
 CONFIG_REBOOT=y
+CONFIG_BUILD_OUTPUT_BIN=y
