--- a/boards/arm/faze/faze_defconfig
+++ b/boards/arm/faze/faze_defconfig
@@ -6,6 +6,7 @@
 
 CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=48000000
 CONFIG_GPIO=y
+CONFIG_BUILD_OUTPUT_BIN=y
 CONFIG_BUILD_OUTPUT_HEX=y
 CONFIG_SOC_SERIES_LPC11U6X=y
 CONFIG_SOC_LPC11U67=y
