--- a/boards/arm/lpcxpresso11u68/lpcxpresso11u68_defconfig
+++ b/boards/arm/lpcxpresso11u68/lpcxpresso11u68_defconfig
@@ -1,6 +1,7 @@
 CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=48000000
 CONFIG_GPIO=y
+CONFIG_BUILD_OUTPUT_BIN=y
 CONFIG_BUILD_OUTPUT_HEX=y
 CONFIG_SOC_SERIES_LPC11U6X=y
 # Since the board has little memory (32k), stack sizes are lowered
