toolchain: xtensa: xt-clang supports newlib
Added newlib C runtime library support for xt-clang toolchain
that is provided by Xtensa commercial installation.
Updated intel_adsp_ace15_mtpm board so it can use new xt-clang
toolchain. Added new xcc-clang.h toolchain header.
Refactored existing newlib linking workaround that is applicable
only to aarch64 architecture.

Signed-off-by: Andrey Borisovich <andrey.borisovich@intel.com>

--- a/lib/libc/Kconfig
+++ b/lib/libc/Kconfig
@@ -52,7 +52,7 @@ config NEWLIB_LIBC
 	depends on !NATIVE_APPLICATION
 	help
 	  Build with newlib library. The newlib library is expected to be
-	  part of the SDK in this case.
+	  part of the Zephyr SDK or provided with custom toolchain.
 
 config ARCMWDT_LIBC
 	bool "ARC MWDT C library"
