--- a/lib/libc/newlib/CMakeLists.txt
+++ b/lib/libc/newlib/CMakeLists.txt
@@ -23,46 +23,58 @@ if(LIBC_INCLUDE_DIR)
 endif()
 
 if(LIBC_LIBRARY_DIR)
-  set(LIBC_LIBRARY_DIR_FLAG -L${LIBC_LIBRARY_DIR})
+  cmake_path(ABSOLUTE_PATH LIBC_LIBRARY_DIR NORMALIZE)
+
+  if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64")
+    set(LIBC_LIBRARY_DIR_FLAG -L"${LIBC_LIBRARY_DIR}")
+    # We are using
+    # - ${CMAKE_C_LINKER_WRAPPER_FLAG}${CMAKE_LINK_LIBRARY_FLAG}c
+    # - ${CMAKE_C_LINKER_WRAPPER_FLAG}${CMAKE_LINK_LIBRARY_FLAG}gcc
+    # - c
+    # in code below.
+    # This is needed because when linking with newlib on aarch64, then libgcc has a
+    # link dependency to libc (strchr), but libc also has dependencies to libgcc.
+    #
+    # CMake is capable of handling circular link dependencies for CMake defined
+    # static libraries, which can be further controlled using LINK_INTERFACE_MULTIPLICITY.
+    # However, libc and libgcc are not regular CMake libraries, and is seen as linker
+    # flags by CMake, and thus symbol de-duplications will be performed.
+    # CMake link options cannot be used, as that will place those libs first on the
+    # linker invocation. -Wl,--start-group is problematic as the placement of -lc
+    # and -lgcc is not guaranteed in case later libraries are also using
+    # -lc / -libbgcc as interface linker flags.
+    #
+    # Thus, we resort to use `${CMAKE_C_LINKER_WRAPPER_FLAG}${CMAKE_LINK_LIBRARY_FLAG}`
+    # as this ensures the uniqueness and thus avoids symbol de-duplication which means
+    # libc will be followed by libgcc, which is finally followed by libc again.
+
+    list(JOIN CMAKE_C_LINKER_WRAPPER_FLAG "" linker_wrapper_string)
+
+    zephyr_link_libraries(
+      m
+      "${linker_wrapper_string}${CMAKE_LINK_LIBRARY_FLAG}c"
+      ${LIBC_LIBRARY_DIR_FLAG} # NB: Optional
+      $<$<BOOL:${CONFIG_NEWLIB_LIBC_FLOAT_PRINTF}>:-u_printf_float>
+      $<$<BOOL:${CONFIG_NEWLIB_LIBC_FLOAT_SCANF}>:-u_scanf_float>
+      # Lib C depends on libgcc. e.g. libc.a(lib_a-fvwrite.o) references __aeabi_idiv
+      "${linker_wrapper_string}${CMAKE_LINK_LIBRARY_FLAG}gcc"
+      c
+      )
+  else() # All other architectures - link normally
+    target_link_directories(zephyr_interface INTERFACE ${LIBC_LIBRARY_DIR})
+    # libc - c runtimes and libm - math functions
+    target_link_libraries(zephyr_interface INTERFACE m c)
+    target_link_options(zephyr_interface INTERFACE
+      $<$<BOOL:${CONFIG_NEWLIB_LIBC_FLOAT_PRINTF}>:-u_printf_float>
+      $<$<BOOL:${CONFIG_NEWLIB_LIBC_FLOAT_SCANF}>:-u_scanf_float>
+    )
+  endif()
+
 endif()
 
 # define __LINUX_ERRNO_EXTENSIONS__ so we get errno defines like -ESHUTDOWN
 # used by the network stack
 zephyr_compile_definitions(__LINUX_ERRNO_EXTENSIONS__)
-
-# We are using
-# - ${CMAKE_C_LINKER_WRAPPER_FLAG}${CMAKE_LINK_LIBRARY_FLAG}c
-# - ${CMAKE_C_LINKER_WRAPPER_FLAG}${CMAKE_LINK_LIBRARY_FLAG}gcc
-# - c
-# in code below.
-# This is needed because when linking with newlib on aarch64, then libgcc has a
-# link dependency to libc (strchr), but libc also has dependencies to libgcc.
-#
-# CMake is capable of handling circular link dependencies for CMake defined
-# static libraries, which can be further controlled using LINK_INTERFACE_MULTIPLICITY.
-# However, libc and libgcc are not regular CMake libraries, and is seen as linker
-# flags by CMake, and thus symbol de-duplications will be performed.
-# CMake link options cannot be used, as that will place those libs first on the
-# linker invocation. -Wl,--start-group is problematic as the placement of -lc
-# and -lgcc is not guaranteed in case later libraries are also using
-# -lc / -libbgcc as interface linker flags.
-#
-# Thus, we resort to use `${CMAKE_C_LINKER_WRAPPER_FLAG}${CMAKE_LINK_LIBRARY_FLAG}`
-# as this ensures the uniqueness and thus avoids symbol de-duplication which means
-# libc will be followed by libgcc, which is finally followed by libc again.
-
-list(JOIN CMAKE_C_LINKER_WRAPPER_FLAG "" linker_wrapper_string)
-
-zephyr_link_libraries(
-  m
-  "${linker_wrapper_string}${CMAKE_LINK_LIBRARY_FLAG}c"
-  ${LIBC_LIBRARY_DIR_FLAG} # NB: Optional
-  $<$<BOOL:${CONFIG_NEWLIB_LIBC_FLOAT_PRINTF}>:-u_printf_float>
-  $<$<BOOL:${CONFIG_NEWLIB_LIBC_FLOAT_SCANF}>:-u_scanf_float>
-  # Lib C depends on libgcc. e.g. libc.a(lib_a-fvwrite.o) references __aeabi_idiv
-  "${linker_wrapper_string}${CMAKE_LINK_LIBRARY_FLAG}gcc"
-  c
-  )
 
 if(CONFIG_NEWLIB_LIBC_NANO)
   zephyr_link_libraries(
